# bjoernricks.github.io

./: .gitignore  README.md  index.html  pelicanconf.py  publishconf.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: github-pages.yml
content/: conf.py
content/pages/: about.md
content/posts/: a-new-post.md  links-of-the-week-062023.md  links-of-the-week-230206.md  links-of-the-week-230208.md  links-of-the-week-2306.md  links-of-the-week-2308.md  til-230207.md  til-230221.md  what-s-new-in-python.md
content/posts/links-of-the-week/: 2306.md  2308.md  2310.md  2328.md  2345.md  2348.md  2349.md  2351.md  2402.md  2405.md  2407.md  2412.md
content/posts/python/: context-manager.md  stdlib-etree-vs-lxml-etree.md  what-s-new-in-python.md
content/posts/til/: 230207.md  230221.md
content/themes/hemingway-jinja/assets/css/: style.css
content/themes/hemingway-jinja/templates/: base.tmpl  index.tmpl  post.tmpl  story.tmpl  tag.tmpl  tags.tmpl
content/themes/hemingway/templates/: base.tmpl  index.tmpl  post.tmpl  story.tmpl
latest/: index.html
mdit_toc/: __init__.py  plugin.py
pelican/plugins/markdown_it/: __init__.py  reader.py
pelican/plugins/teaser/: __init__.py  teaser.py
themes/hemingway-jinja/: hemingway-jinja.theme
themes/hemingway-jinja/static/css/: style.css
themes/hemingway-jinja/templates/: article.html  base.html  categories.html  index.html  page.html  tags.html
