[tool.poetry]
name = "bjoernricks-github-io"
version = "1.0.0"
description = ""
authors = ["Björn Ricks <bjoern.ricks@gmail.com>"]
readme = "README.md"
packages = [{include = "bjoernricks"}]

[tool.poetry.dependencies]
python = "^3.10"
nikola = "^8.2.4"

[tool.poetry.group.dev.dependencies]
autohooks-plugin-black = "^23.4.0"
autohooks-plugin-pylint = "^23.4.0"
autohooks-plugin-isort = "^23.4.0"
aiohttp = "^3.8.3"
watchdog = "^3.0.0"
ruamel-yaml = "^0.17.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
