[tool.poetry]
name = "bjoernricks-github-io"
version = "1.0.0"
description = ""
authors = ["Björn Ricks <bjoern.ricks@gmail.com>"]
readme = "README.md"
packages = [
  { include = "pelican/plugins/markdown_it" },
  { include = "pelican/plugins/teaser" },
]

[tool.poetry.dependencies]
python = "^3.11"
pelican = { extras = ["markdown"], version = ">=4.9.1" }
markdown-it-py = "^3.0.0"
mdit-py-plugins = "^0.4.0"
pyyaml = "^6.0.1"
mdit-py-toc = "^1.0.0"

[tool.poetry.group.dev.dependencies]
autohooks-plugin-black = ">=22.11.0"
autohooks-plugin-ruff = ">=22.10.0"

[tool.poetry.scripts]

[tool.ruff]
line-length = 80
target-version = "py311"
extend-select = ["I", "PLE", "PLW"]

[tool.black]
line-length = 80
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''


[tool.autohooks]
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.ruff"]
mode = "poetry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
